Adapt program to SQLite, Add few tests, Add few comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,13 @@ name = mypackage
 version = 0.1
 
 [options]
-package_dir= 
-    =src
+# package_dir= 
+#     =src
 packages=find:
 
 
-[options.packages.find]
-where=src
+# [options.packages.find]
+# where=src
 
 
 
