--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,12 @@ jobs:
     - name: Install dependecies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r test_requirements.txt
         pip install -e .
         pip install pytest
+        pip install flake8
     - name: Test with pytest
       run: pytest -v
+    - name: Test with flake8
+      run: flake src/*
+      run: flake tests/*
