--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Test with pytest
       run: pytest -v
     - name: Test with flake8
-      run: flake8 src/* tests/*
+      run: flake8 src tests
