--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,10 @@ version = 0.1
 packages=find:
 
 [flake8]
-max-line-length = 160
+max-line-length = 120
+ignore = 
+    E402
+    E266
+    W503
+exclude = 
+    tests/*
