--- a/setup.cfg
+++ b/setup.cfg
@@ -4,30 +4,9 @@ version = 0.1
 
 [options]
 install_requires =
-    atomicwrites==1.4.0
-    attrs==21.4.0
-    build==0.7.0
-    colorama==0.4.4
-    iniconfig==1.1.1
-    mccabe==0.6.1
-    numpy==1.21.4
-    packaging==21.3
-    pandas==1.3.5
-    pep517==0.12.0
-    pluggy==1.0.0
-    py==1.11.0
-    pycodestyle==2.8.0
-    pyflakes==2.4.0
-    pyparsing==3.0.7
     PyQt6==6.2.2
-    PyQt6-Qt6==6.2.2
-    PyQt6-sip==13.2.0
-    python-dateutil==2.8.2
-    pytz==2021.3
-    six==1.16.0
-    toml==0.10.2
-    tomli==2.0.0
-packages=find:
+packages=
+    =src
 
 [flake8]
 max-line-length = 120
