--- a/pytest.ini
+++ b/pytest.ini
@@ -6,7 +6,7 @@ python =
 python_files = test_*
 python_functions = test_*
 python_classes = *Tests
-testpaths = Tests
+testpaths = tests
 markers = 
     sqlite
     tools
