--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,8 @@ jobs:
         pip install -e .
         pip install pytest
         pip install flake8
+        pip install codecov
+        pip install pytest-cov
     - name: Check all dependeccies
       run: pip list
     - name: Test with pytest
@@ -24,3 +26,7 @@ jobs:
       run: python -m pytest tests -vs
     - name: Test with flake8
       run: flake8 src
+    - name: Test with codecov
+      run:
+        pytest --cov=./ --cov-report=xml
+        codecov
